fix(student): 修复获取学生数据时的方法调用错误
- 将 result.getFirst() 替换为 result.get(0) 以兼容JDK版本
- 解决了在某些JDK环境下 getFirst() 方法不可用的问题